user feature and loout functionality compelete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="h-full">
-  <div id="root">
+  <div id="root" class="he-full">
   </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
