front end compelet

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="h-full">
-  <div id="root" class="he-full">
-  </div>
+  <div id="root" class="he-full"></div>
+  <div id="alert-root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
